# chip-st1vafe3bx

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  wokwi.toml
.github/docker/: Dockerfile
.github/workflows/: ci.yaml
cmake/: wasm32-unknown-wasi-toolchain.cmake
src/: st1vafe3bx.chip.c  st1vafe3bx.chip.json
